--- a/assets/css/game-page-template.css
+++ b/assets/css/game-page-template.css
@@ -10,8 +10,9 @@
 .body-content{
   font-family:sans-serif;
   margin-left:10%;
-  margin-right:10;
+  margin-right:10%;
   background-color:black;
   color:white;
   display:block;
+  font-size:1.3em;
 }
